// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopicPure component match expected snapshot with parent forum information 1`] = `
<div
  className="default-Topic-wrapper"
>
  <withStyles(RowPure)>
    <withStyles(ColumnPure)
      xs={12}
    >
      <withStyles(RowPure)>
        <withStyles(ColumnPure)
          lg={9}
          md={7}
          xs={12}
        >
          <withStyles(RowPure)
            className="default-Topic-centerRow"
          >
            <withStyles(ColumnPure)
              className="default-Topic-titleContainer"
              lg={8}
              xs={12}
            >
              <withStyles(RowPure)>
                <withStyles(ColumnPure)
                  xs={12}
                >
                  <withStyles(LinkPure)
                    className="default-Topic-titleStyle"
                    to="/Conference/Topic/1"
                  >
                    Как деактивировать бомбу
                  </withStyles(LinkPure)>
                </withStyles(ColumnPure)>
              </withStyles(RowPure)>
              <withStyles(RowPure)
                className="default-Topic-textSmallMd"
              >
                <withStyles(ColumnPure)
                  lg={12}
                  md={7}
                  xs={12}
                >
                  <span
                    className="default-Topic-parentForumWrapper"
                  >
                    <Connect(Term)
                      spaceAfter={true}
                      term={
                        Object {
                          "id": 25,
                          "value": "Forum:",
                        }
                      }
                      untermedPostfix=":"
                    />
                    <withStyles(LinkPure)
                      className="default-Topic-parentForumTitleStyle"
                      to="/Forum/10"
                    >
                      Общие вопросы
                    </withStyles(LinkPure)>
                  </span>
                </withStyles(ColumnPure)>
                <withStyles(ColumnPure)
                  md={5}
                >
                  <withStyles(HiddenPure)
                    className="default-Topic-noWrap"
                    lg="up"
                    sm="down"
                  >
                    <Connect(Term)
                      spaceAfter={true}
                      term={
                        Object {
                          "id": 2,
                          "value": "Posts",
                        }
                      }
                      untermedPostfix=":"
                    />
                    215
                  </withStyles(HiddenPure)>
                </withStyles(ColumnPure)>
              </withStyles(RowPure)>
            </withStyles(ColumnPure)>
            <withStyles(ColumnPure)
              className="default-Topic-centerRow"
              lg={2}
            >
              <withStyles(HiddenPure)
                md="down"
              >
                215
              </withStyles(HiddenPure)>
            </withStyles(ColumnPure)>
            <withStyles(ColumnPure)
              className="default-Topic-centerRow"
              lg={2}
            >
              <withStyles(HiddenPure)
                md="down"
              >
                1315
              </withStyles(HiddenPure)>
            </withStyles(ColumnPure)>
          </withStyles(RowPure)>
        </withStyles(ColumnPure)>
        <withStyles(ColumnPure)
          lg={3}
          md={5}
          xs={12}
        >
          <withStyles(RowPure)
            className="default-Topic-heightFull"
          >
            <withStyles(ColumnPure)
              className="default-Topic-lastPostInfoStyle"
              lg={10}
              xs={12}
            >
              <UserName
                color="#00AA00"
                id={4}
                name="Buba"
              />
              <withStyles(HiddenPure)
                lg="up"
              >
                <Connect(Term)
                  doNotTerm={true}
                  indentAfter={true}
                  indentBefore={true}
                  spaceAfter={true}
                  spaceBefore={true}
                  untermedPostfix="-"
                />
              </withStyles(HiddenPure)>
              <Connect(RelativeDateTime)
                relativeDateTime={2016-09-19T10:42:32.000Z}
              />
            </withStyles(ColumnPure)>
            <withStyles(ColumnPure)
              lg={2}
            >
              <withStyles(HiddenPure)
                className="default-Topic-lastPostInfoStyle"
                md="down"
              >
                <withStyles(AvatarPure)
                  avatarUrl="http://i70.fastpic.ru/big/2015/0628/36/ccbb1e2cb8ba8dbd379a6a12dc6b8336.jpg"
                  id={4}
                  size={2.5}
                />
              </withStyles(HiddenPure)>
            </withStyles(ColumnPure)>
          </withStyles(RowPure)>
        </withStyles(ColumnPure)>
      </withStyles(RowPure)>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
  <div
    className="default-Topic-separator"
  />
</div>
`;

exports[`TopicPure component match expected snapshot without parent forum information 1`] = `
<div
  className="default-Topic-wrapper"
>
  <withStyles(RowPure)>
    <withStyles(ColumnPure)
      xs={12}
    >
      <withStyles(RowPure)>
        <withStyles(ColumnPure)
          lg={9}
          md={7}
          xs={12}
        >
          <withStyles(RowPure)
            className="default-Topic-centerRow"
          >
            <withStyles(ColumnPure)
              className="default-Topic-titleContainer"
              lg={8}
              xs={12}
            >
              <withStyles(RowPure)>
                <withStyles(ColumnPure)
                  xs={12}
                >
                  <withStyles(LinkPure)
                    className="default-Topic-titleStyle"
                    to="/Conference/Topic/1"
                  >
                    Как деактивировать бомбу
                  </withStyles(LinkPure)>
                </withStyles(ColumnPure)>
              </withStyles(RowPure)>
              <withStyles(RowPure)
                className="default-Topic-textSmallMd"
              >
                <withStyles(ColumnPure)
                  md={5}
                >
                  <withStyles(HiddenPure)
                    className="default-Topic-noWrap"
                    lg="up"
                    sm="down"
                  >
                    <Connect(Term)
                      spaceAfter={true}
                      term={
                        Object {
                          "id": 2,
                          "value": "Posts",
                        }
                      }
                      untermedPostfix=":"
                    />
                    215
                  </withStyles(HiddenPure)>
                </withStyles(ColumnPure)>
              </withStyles(RowPure)>
            </withStyles(ColumnPure)>
            <withStyles(ColumnPure)
              className="default-Topic-centerRow"
              lg={2}
            >
              <withStyles(HiddenPure)
                md="down"
              >
                215
              </withStyles(HiddenPure)>
            </withStyles(ColumnPure)>
            <withStyles(ColumnPure)
              className="default-Topic-centerRow"
              lg={2}
            >
              <withStyles(HiddenPure)
                md="down"
              >
                1315
              </withStyles(HiddenPure)>
            </withStyles(ColumnPure)>
          </withStyles(RowPure)>
        </withStyles(ColumnPure)>
        <withStyles(ColumnPure)
          lg={3}
          md={5}
          xs={12}
        >
          <withStyles(RowPure)
            className="default-Topic-heightFull"
          >
            <withStyles(ColumnPure)
              className="default-Topic-lastPostInfoStyle"
              lg={10}
              xs={12}
            >
              <UserName
                color="#00AA00"
                id={4}
                name="Buba"
              />
              <withStyles(HiddenPure)
                lg="up"
              >
                <Connect(Term)
                  doNotTerm={true}
                  indentAfter={true}
                  indentBefore={true}
                  spaceAfter={true}
                  spaceBefore={true}
                  untermedPostfix="-"
                />
              </withStyles(HiddenPure)>
              <Connect(RelativeDateTime)
                relativeDateTime={2016-09-19T10:42:32.000Z}
              />
            </withStyles(ColumnPure)>
            <withStyles(ColumnPure)
              lg={2}
            >
              <withStyles(HiddenPure)
                className="default-Topic-lastPostInfoStyle"
                md="down"
              >
                <withStyles(AvatarPure)
                  avatarUrl="http://i70.fastpic.ru/big/2015/0628/36/ccbb1e2cb8ba8dbd379a6a12dc6b8336.jpg"
                  id={4}
                  size={2.5}
                />
              </withStyles(HiddenPure)>
            </withStyles(ColumnPure)>
          </withStyles(RowPure)>
        </withStyles(ColumnPure)>
      </withStyles(RowPure)>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
  <div
    className="default-Topic-separator"
  />
</div>
`;
